fix/removes editor line wrapping and gives left panel own scroll bar

--- a/safe_web_api_playground/static/css/styles.css
+++ b/safe_web_api_playground/static/css/styles.css
@@ -170,6 +170,13 @@ textarea {
   padding-right: 1%;
 }
 
+#snippetParent {
+  height: 85vh;
+  position: fixed;
+  overflow: auto;
+  width: 25%;
+}
+
 #runButton {
   font-family: 'Roboto-Regular';
   margin: 1%;
